Junit 5 adaptation